--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore the node_modules directory
-node_modules/
+# # Ignore the node_modules directory
+# node_modules/
 
-# Ignore the .env file
-.env
+# # Ignore the .env file
+# .env
+node_modules
