--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# # Ignore the node_modules directory
-# node_modules/
+# Ignore the node_modules directory
+node_modules/
 
-# # Ignore the .env file
-# .env
-node_modules
+# Ignore the .env file
+.env
